Download service done

--- a/download/templates/download.html
+++ b/download/templates/download.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-        <form method="POST" action="/download">
+        <form method="POST" action="/">
             UserID:  <input type="text" name="userid"> <br>
             Image: <input type="text" name="image"> <br>
             <input type="submit" value="Download">
